--- a/app/views/subs/index.html.erb
+++ b/app/views/subs/index.html.erb
@@ -1,2 +1,3 @@
-<h1>Subs#index</h1>
-<p>Find me in app/views/subs/index.html.erb</p>
+<h1>Viewing all subs </h1>
+
+<%= link_to 'Create new sub', new_sub_path %>
