topic controller and views done

--- a/app/views/subs/index.html.erb
+++ b/app/views/subs/index.html.erb
@@ -1,3 +1,7 @@
 <h1>Viewing all subs </h1>
 
 <%= link_to 'Create new sub', new_sub_path %>
+
+<% @subs.each do |sub| %>
+  <%= link_to sub.name, sub%>
+<% end %>
