--- a/app/views/subs/show.html.erb
+++ b/app/views/subs/show.html.erb
@@ -1,2 +1,7 @@
-<h1>Subs#show</h1>
-<p>Find me in app/views/subs/show.html.erb</p>
+<h1><%=@sub.name%></h1>
+
+<%= link_to 'view Topics', sub_topics_path(@sub)%>
+<%= link_to 'edit sub', edit_sub_path(@sub) %>
+<%= link_to 'delete sub', @sub, method: :delete%>
+
+
