--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,2 +1,7 @@
-<h1>Topics#index</h1>
-<p>Find me in app/views/topics/index.html.erb</p>
+<h1>Topics</h1>
+
+<%= link_to 'Create a new topic', new_sub_topic_path(@sub) %>
+
+<% @topics.each do |t| %>
+  <%= link_to topic.name, [@sub, @topic]%>
+<% end %>
