--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,2 +1,6 @@
-<h1>Topics#show</h1>
-<p>Find me in app/views/topics/show.html.erb</p>
+<h1><%= @sub.name %> - <%= @topic.name %></h1>
+
+<%= @topic.body %>
+<%= link_to 'edit topic', edit_sub_topic_path([@sub, @topic])%>
+<%= link_to 'Delete Topic', [@sub, @topic], method: :delete %>
+<%= link_to 'back to topic', sub_topics_path(@sub) %>
